crates/toml/tests/snapshots/invalid/inline-table/double-comma.stderr
TOML parse error at line 1, column 10
  |
1 | t = {x=3,,y=4}
  |          ^
extra comma in inline table, expected key
